--- a/index.html
+++ b/index.html
@@ -80,6 +80,8 @@
         </section>
     </main>
 
+    <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
+    <script src="./shared.js"></script>
     <script src="./script.js"></script>
 </body>
 </html>
