--- a/index.html
+++ b/index.html
@@ -54,9 +54,13 @@
                     </form>
                 </div>
 
-                <div class="expense-list">
+                <div class="recent-expenses">
                     <h2>Recent Expenses</h2>
-                    <div id="expensesList"></div>
+                    <div class="expenses-container">
+                        <div id="expensesList" class="expenses-list">
+                            <!-- Expenses will be added here dynamically -->
+                        </div>
+                    </div>
                 </div>
             </div>
 
